@@ -1,6 +1,24 @@
 import de.heikoseeberger.sbtheader.AutomateHeaderPlugin
 
-lazy val baseSettings: Seq[sbt.Def.Setting[_]] = {
+def wartRemoverSettings: Seq[Setting[_]] =
+  List(Compile, Test).flatMap { c ⇒
+    inConfig(c)(
+      WartRemover.autoImport.wartremoverErrors in (Compile, compile) ++=
+        Warts.allBut(
+          Wart.NonUnitStatements,
+          Wart.Equals,
+          Wart.Overloading,
+          Wart.ImplicitParameter,
+          Wart.Nothing,
+          Wart.ImplicitConversion,
+          Wart.Any,
+          Wart.PublicInference,
+          Wart.Recursion
+        )
+    )
+  }
+
+lazy val baseSettings: Seq[sbt.Def.Setting[_]] =
   Seq(
     organization         := "com.nrinaudo",
     organizationHomepage := Some(url("https://nrinaudo.github.io")),
@@ -18,11 +36,10 @@ lazy val baseSettings: Seq[sbt.Def.Setting[_]] = {
         s"scm:git:git@github.com:nrinaudo/kantan.sbt.git"
       )
     )
-  )
-}
+  ) ++ wartRemoverSettings
 
-lazy val pluginSettings = scriptedSettings ++ Seq(
-  scriptedLaunchOpts ++= Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value),
+lazy val pluginSettings = Seq(
+  scriptedLaunchOpts ++= Seq("-Xmx1024M", "-Dplugin.version=" + version.value),
   sbtPlugin          := true,
   scalacOptions ++= Seq(
     "-encoding",
@@ -38,7 +55,8 @@ lazy val pluginSettings = scriptedSettings ++ Seq(
     "-Ywarn-numeric-widen",
     "-Ywarn-value-discard",
     "-Xfuture",
-    "-Xlint"
+    "-Xlint",
+    "-Xfatal-warnings"
   )
 )
 
@@ -46,8 +64,8 @@ lazy val root = Project(id = "kantan-sbt", base = file("."))
   .settings(moduleName := "root")
   .settings(baseSettings)
   .settings(
-    publish         := (),
-    publishLocal    := (),
+    publish         := {},
+    publishLocal    := {},
     publishArtifact := false
   )
   .aggregate(core, strict, kantan, boilerplate, scalastyle, scalafmt)
